--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="author" content="無名" />
+  <meta name="author" content="兔兔" />
   <title>一个导航 - OneNav</title>
   <meta name="keywords" content="网址导航">
   <meta name="description" content="OneNav">
@@ -1262,8 +1262,8 @@
     <!-- Add your copyright text here -->
     <p>
       
-      &copy; 2020 - 2022
-      <a href="https://www.imsyy.top" target="_blank"><strong>無名</strong></a> | Design by <a href="http://viggoz.com" target="_blank"><strong>Viggo</strong></a> | Power by <a href="https://hexo.io/" target="_blank"><strong>Hexo</strong></a> & <a href="https://github.com/HCLonely/hexo-theme-webstack/" target="_blank"><strong>hexo-theme-webstack</strong></a>
+      &copy; 2020 - 2023
+      <a href="https://home.tutuxka.eu.org/" target="_blank"><strong>兔兔</strong></a> | Design by <a href="http://viggoz.com" target="_blank"><strong>Viggo</strong></a> | Power by <a href="https://hexo.io/" target="_blank"><strong>Hexo</strong></a> & <a href="https://github.com/HCLonely/hexo-theme-webstack/" target="_blank"><strong>hexo-theme-webstack</strong></a>
     </p>
     <!-- <div class="go-up">
       <a href="#" rel="go-top">
